[gd_scene load_steps=5 format=3 uid="uid://uswct46weip8"]

[ext_resource type="PackedScene" uid="uid://bnkonpqorxmky" path="res://prefabs/entities/player.tscn" id="1_e05a3"]
[ext_resource type="Script" uid="uid://b10vs6r3kjcc" path="res://scripts/arena.gd" id="1_olpmc"]
[ext_resource type="FontFile" uid="uid://bdk4mnsgx2ejv" path="res://assets/fonts/wheaton-capitals/wheaton capitals.otf" id="3_olpmc"]

[sub_resource type="Environment" id="Environment_wl4x5"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.54
glow_bloom = 0.5

[node name="Arena" type="Node2D"]
script = ExtResource("1_olpmc")

[node name="Player" parent="." instance=ExtResource("1_e05a3")]
position = Vector2(730, 378)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wl4x5")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="PowerUpSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="WaveLabel" type="Label" parent="HUD/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.98944527, 0.87216645, 0.8691992, 0)
theme_override_fonts/font = ExtResource("3_olpmc")
theme_override_font_sizes/font_size = 36
text = "WAVE: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHPBar" type="ProgressBar" parent="HUD/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BossHPBar" type="ProgressBar" parent="HUD/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="HUD/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.98944527, 0.87216645, 0.8691992, 0)
theme_override_fonts/font = ExtResource("3_olpmc")
theme_override_font_sizes/font_size = 36
text = "SCORE: "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="PowerUpSpawnTimer" to="." method="_on_power_up_spawn_timer_timeout"]
